# multimodal_emotion_detection

./: .gitignore  CMakeLists.txt  LICENSE  README.md  facial_emotion_detection.py  main.py  output_video.avi  package.xml  requirements.txt  setup.py  speech_emotion_detection.py
config/: ros.yaml
launch/: multimodal_emotion_detection_ros.launch
models/face/: face_norm_scalar.pkl
msg/: EmotionData.msg
scripts/: main.py
source/: config.py
source/audio_analysis_utils/: predict.py  preprocess_data.py  transcribe_audio.py  utils.py
source/audio_face_combined/: predict.py  preprocess_main.py  utils.py
source/face_emotion_utils/: face_config.py  face_mesh.py  predict.py
source/llm_utils/: assistant.py
source/real_time/: real_time.py
source/whisper/whisper/: audio.py
src/SER/: emotion_detection.py
src/wav2vec/: models.py
